@@ -23,8 +23,15 @@ set ::tcltest::testConstraints(testexithandler) \
 set ::tcltest::testConstraints(testfilewait) \
 	[expr {[info commands testfilewait] != {}}]
 
+set ::tcltest::testConstraints(knownBugThreadedLinux) [expr \
+	{($tcl_platform(os) != "Linux") \
+	&& ([info commands testthread] != {})}]
 
-test event-1.1 {Tcl_CreateFileHandler, reading} {testfilehandler} {
+set ::tcltest::testConstraints(knownBugThreadedSolaris) [expr \
+	{($tcl_platform(os) != "SunOS") \
+	&& ([info commands testthread] != {})}]
+
+test event-1.1 {Tcl_CreateFileHandler, reading} {testfilehandler knownBugThreadedLinux knownBugThreadedSolaris} {
     testfilehandler close
     testfilehandler create 0 readable off
     testfilehandler clear 0
@@ -368,7 +375,7 @@ test event-11.3 {Tcl_VwaitCmd procedure} {
     set x 1
     list [catch {vwait x(1)} msg] $msg
 } {1 {can't trace "x(1)": variable isn't array}}
-test event-11.4 {Tcl_VwaitCmd procedure} {
+test event-11.4 {Tcl_VwaitCmd procedure} {knownBugThreadedLinux} {
     foreach i [after info] {
 	after cancel $i
     }
@@ -394,9 +401,9 @@ test event-11.5 {Tcl_VwaitCmd procedure: round robin scheduling, 2 sources} {soc
 	puts $s foobar
 	close $s
     }
-    set s1 [socket -server accept 5001]
+    catch {set s1 [socket -server accept 5001]}
     after 1000
-    set s2 [socket 127.0.0.1 5001]
+    catch {set s2 [socket 127.0.0.1 5001]}
     close $s1
     set x 0
     set y 0
