@@ -27,6 +27,14 @@ if {"[info commands testchannel]" != "testchannel"} {
 
 ::tcltest::saveState
 
+set ::tcltest::testConstraints(knownBugThreadedLinux) [expr \
+	{($tcl_platform(os) != "Linux") \
+	&& ([info commands testthread] != {})}]
+
+set ::tcltest::testConstraints(knownBugThreadedSolaris) [expr \
+	{($tcl_platform(os) != "SunOS") \
+	&& ([info commands testthread] != {})}]
+
 removeFile test1
 removeFile pipe
 
@@ -1025,7 +1033,7 @@ test io-6.55 {Tcl_GetsObj: overconverted} {
     close $f
     set x
 } [list 8 "there\u4e00ok" 11 "\u4e01more bytes" 4 "here"]
-test io-6.56 {Tcl_GetsObj: incomplete lines should disable file events} {stdio} {
+test io-6.56 {Tcl_GetsObj: incomplete lines should disable file events} {stdio knownBugThreadedSolaris knownBugThreadedLinux} {
     update
     set f [open "|[list $::tcltest::tcltest cat]" w+]
     fconfigure $f -buffering none
@@ -1419,7 +1427,7 @@ test io-12.5 {ReadChars: fileevents on partial characters} {stdio} {
     set x
 } "{} timeout {} timeout \u7266 {} eof 0 {}"
 
-test io-13.1 {TranslateInputEOL: cr mode} {
+test io-13.1 {TranslateInputEOL: cr mode} {knownBugThreadedLinux} {
     set f [open test1 w]
     fconfigure $f -translation lf
     puts -nonewline $f "abcd\rdef\r"
@@ -1480,7 +1488,7 @@ test io-13.5 {TranslateInputEOL: crlf mode: naked lf} {
     close $f
     set x
 } "abcd\ndef\nfgh"
-test io-13.6 {TranslateInputEOL: auto mode: saw cr in last segment} {stdio} {
+test io-13.6 {TranslateInputEOL: auto mode: saw cr in last segment} {stdio knownBugThreadedSolaris knownBugThreadedLinux} {
     # (chanPtr->flags & INPUT_SAW_CR)
     # This test may fail on slower machines.
 
@@ -2040,7 +2048,7 @@ test io-27.5 {FlushChannel, implicit flush when buffer fills and on close} \
     set l
 } {0 60 72}
 test io-27.6 {FlushChannel, async flushing, async close} \
-	{stdio asyncPipeClose} {
+	{stdio asyncPipeClose knownBugThreadedLinux} {
     removeFile pipe
     removeFile output
     set f [open pipe w]
@@ -5455,7 +5463,7 @@ test io-45.3 {DeleteFileEvent, cleanup on close} {
 
 if {[info commands testfevent] == "testfevent"} {
 
-test io-46.1 {Tcl event loop vs multiple interpreters} {
+    test io-46.1 {Tcl event loop vs multiple interpreters} {knownBugThreadedLinux} {
     testfevent create
     testfevent cmd {
         set f [open foo r]
@@ -6110,7 +6118,7 @@ test io-49.5 {testing crlf reading, leftover cr disgorgment} {
     set l
 } [list 7 a\rb\rc 7 {} 7 1]
     
-test io-50.1 {testing handler deletion} {
+test io-50.1 {testing handler deletion} {knownBugThreadedSolaris knownBugThreadedLinux} {
     removeFile test1
     set f [open test1 w]
     close $f
@@ -6126,7 +6134,7 @@ test io-50.1 {testing handler deletion} {
     close $f
     set z
 } called
-test io-50.2 {testing handler deletion with multiple handlers} {
+test io-50.2 {testing handler deletion with multiple handlers} {knownBugThreadedSolaris knownBugThreadedLinux} {
     removeFile test1
     set f [open test1 w]
     close $f
@@ -6144,7 +6152,7 @@ test io-50.2 {testing handler deletion with multiple handlers} {
     string compare [string tolower $z] \
 	[list [list called delhandler $f 0] [list called delhandler $f 1]]
 } 0
-test io-50.3 {testing handler deletion with multiple handlers} {
+test io-50.3 {testing handler deletion with multiple handlers} {knownBugThreadedSolaris knownBugThreadedLinux} {
     removeFile test1
     set f [open test1 w]
     close $f
@@ -6170,7 +6178,7 @@ test io-50.3 {testing handler deletion with multiple handlers} {
 	[list [list delhandler $f 0 called] \
 	      [list delhandler $f 0 deleted myself]]
 } 0
-test io-50.4 {testing handler deletion vs reentrant calls} {
+test io-50.4 {testing handler deletion vs reentrant calls} {knownBugThreadedSolaris knownBugThreadedLinux} {
     removeFile test1
     set f [open test1 w]
     close $f
@@ -6194,7 +6202,7 @@ test io-50.4 {testing handler deletion vs reentrant calls} {
     string compare [string tolower $z] \
 	{{delrecursive calling recursive} {delrecursive deleting recursive}}
 } 0
-test io-50.5 {testing handler deletion vs reentrant calls} {
+test io-50.5 {testing handler deletion vs reentrant calls} {knownBugThreadedSolaris knownBugThreadedLinux} {
     removeFile test1
     set f [open test1 w]
     close $f
@@ -6227,7 +6235,7 @@ test io-50.5 {testing handler deletion vs reentrant calls} {
 	[list {del calling recursive} {del deleted notcalled} \
 	      {del deleted myself} {del after update}]
 } 0
-test io-50.6 {testing handler deletion vs reentrant calls} {
+test io-50.6 {testing handler deletion vs reentrant calls} {knownBugThreadedSolaris knownBugThreadedLinux} {
     removeFile test1
     set f [open test1 w]
     close $f
