@@ -1,3 +1,10 @@
+1999-08-26  Jennifer Hom  <jenn@scriptics.com>
+
+	* tests/tcltest.test:
+	* library/tcltest1.0/tcltest.tcl:  Added a -args flag that sets a
+	variable named ::tcltest::parameters based on whatever's being
+	sent in as the argument to the -args flag. 
+
 1999-08-23  Jennifer Hom  <jenn@scriptics.com>
 
 	* tests/tcltest.test: Added additional tests for -tmpdir, marked
